--- a/acercade.html
+++ b/acercade.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,53 +13,75 @@
     <link rel="stylesheet" href="acercade.css">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-        <!-- Font Awesome -->
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>Acerca de</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav m-lg-auto">
-                <li class="nav-item active">
-                    <a class="text-warning" href="./iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./acercade.html">Acerca de</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" alt="" width="150"
+                    height="auto"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./iniciar sesion.html">
+                            <p class="text-light">Iniciar sesión</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./acercade.html">
+                            <p class="text-light">Acerca de</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./servicios.html">
+                            <p class="text-light">Servicios</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">
+                            <p class="text-light">Contacto</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-        <article class="acercademi">
-            <h2>ACERCA DE SOLCAR</h2>
-            <p>SolCar es un microemprendimiento que nace de la pasión por la estética vehicular.
-                En SolCar, me encargo personalmente de dejar los autos en un óptimo estado, realizando los pasos necesarios para hacerlo posible.
-                Hago limpieza interior, trabajando en tapizados, torpedos, etc.
-                Realizo trabajo en ópticas, restaurándolas y así darle un aspecto nuevo.
-                También realizo pulido exterior, quitando rayones, y marcas que se forman con el día a día.            
-            </p>
+    <article class="acercademi">
+        <h2>ACERCA DE SOLCAR</h2>
+        <p>SolCar es un microemprendimiento que nace de la pasión por la estética vehicular.
+            En SolCar, me encargo personalmente de dejar los autos en un óptimo estado, realizando los pasos necesarios
+            para hacerlo posible.
+            Hago limpieza interior, trabajando en tapizados, torpedos, etc.
+            Realizo trabajo en ópticas, restaurándolas y así darle un aspecto nuevo.
+            También realizo pulido exterior, quitando rayones, y marcas que se forman con el día a día.
+        </p>
 
-            <img alt="sol" src="./img/solange.jpg">
+        <img alt="sol" src="./img/solange.jpg">
 
-        </article>
+    </article>
 
-        <footer class="footer">
-            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
-            
-        </footer>
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>     
+    <footer class="footer">
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia
+                Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    -->
+
 </body>
+
 </html>
