--- a/contacto.html
+++ b/contacto.html
@@ -20,41 +20,56 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav m-lg-auto">
-                <li class="nav-item active">
-                    <a class="text-warning" href="./iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./acercade.html">Acerca de</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" alt="" width="150"
+                    height="auto"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./iniciar sesion.html">
+                            <p class="text-light">Iniciar sesión</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./acercade.html">
+                            <p class="text-light">Acerca de</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./servicios.html">
+                            <p class="text-light">Servicios</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">
+                            <p class="text-light">Contacto</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
-    
+
     <div class="container">
         <div class="data">
-        <ul>
-            <li><a href="https://wa.me/5491160113083/?text=Hola%20quiero%20info"><i class="bi bi-whatsapp"></i>   WhatsApp</a></li>
-            <li><a href="mailto:solcar.detailing@hotmail.com"><i class="bi bi-envelope"></i>  Correo electrónico</a></li>
-            <li><i class="bi bi-geo-alt"></i>  Zárate - Realizo trabajos a domicilio, consultar zona.</li>
-        </ul>
+            <ul>
+                <li><a href="https://wa.me/5491160113083/?text=Hola%20quiero%20info"><i class="bi bi-whatsapp"></i>
+                        WhatsApp</a></li>
+                <li><a href="mailto:solcar.detailing@hotmail.com"><i class="bi bi-envelope"></i> Correo electrónico</a>
+                </li>
+                <li><i class="bi bi-geo-alt"></i> Zárate - Realizo trabajos a domicilio, consultar zona.</li>
+            </ul>
         </div>
 
-    <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52857.01919721397!2d-59.07680187057618!3d-34.10631586241183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6a92357b4d%3A0x5f7d9ac7c145085d!2sZ%C3%A1rate%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1624380001287!5m2!1ses-419!2sar" width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52857.01919721397!2d-59.07680187057618!3d-34.10631586241183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6a92357b4d%3A0x5f7d9ac7c145085d!2sZ%C3%A1rate%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1624380001287!5m2!1ses-419!2sar"
+                width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
     </div>
 
@@ -62,10 +77,18 @@
 
 
     <footer class="footer">
-        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
-        
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia
+                Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
+
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    -->
+
 </body>
 
 </html>
