--- a/index.html
+++ b/index.html
@@ -20,26 +20,37 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav m-lg-auto">
-                <li class="nav-item active">
-                    <a class="text-warning" href="./iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./acercade.html">Acerca de</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="text-warning" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" alt="" width="150"
+                    height="auto"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./iniciar sesion.html">
+                            <p class="text-light">Iniciar sesión</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./acercade.html">
+                            <p class="text-light">Acerca de</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./servicios.html">
+                            <p class="text-light">Servicios</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">
+                            <p class="text-light">Contacto</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -66,12 +77,17 @@
     </section>
 
     <footer class="footer">
-        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
-        
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia
+                Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
+
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
     -->
 
 </body>
